--- a/style.css
+++ b/style.css
@@ -365,3 +365,187 @@ tr, td{
 
 }
 
+
+@media only screen and (min-width:1020px) and (max-width:1100px)
+{
+    .box01{
+        margin-left: 49%;
+    }
+    .img3 {
+        width: 157.47px;
+        padding-left: 10.53px;
+}
+.img1{
+    padding-left: 10.53px;
+}
+.img2{
+    padding-left: 10.53px;
+}
+.img3{
+    padding-left: 10.53px;
+}
+.img4{
+    padding-left: 10.53px;
+}
+.img5{
+    padding-left: 10.53px;
+}
+.img6{
+    padding-left: 10.53px;
+}
+.img002 {
+    padding-left: 72%;
+}
+.div001 img{
+    padding-top: 10px;
+    width: 137%;
+}
+.main3 .div2 {
+    margin-left: 17%;
+}
+.main3 .div3 {
+    margin-left: 19%;}
+    .main3 .div4 {
+        margin-left: 11%;
+    }
+    .main3 .div5 {
+               margin-left: 9%;}
+               .main3 .div6 {
+                margin-left: 3%;
+            }
+            .picture {
+                margin-left: 12%;
+            }
+        }
+
+@media only screen and (min-width:1100px) and (max-width:1200px)
+{
+    .box01{
+        margin-left: 54%;
+    }
+    .img3 {
+        width: 157.47px;
+        padding-left: 10.53px;
+}
+.img1{
+    padding-left: 10.53px;
+}
+.img2{
+    padding-left: 10.53px;
+}
+.img3{
+    padding-left: 10.53px;
+}
+.img4{
+    padding-left: 10.53px;
+}
+.img5{
+    padding-left: 10.53px;
+}
+.img6{
+    padding-left: 10.53px;
+}
+.img002 {
+    padding-left: 72%;
+}
+.div001 img{
+    padding-top: 2px;
+    width: 137%;
+}
+.main3 .div2 {
+    margin-left: 18%;
+}
+.main3 .div3 {
+    margin-left: 20%;}
+    .main3 .div4 {
+        margin-left: 11%;
+    }
+    .main3 .div5 {
+               margin-left: 10%;}
+               .main3 .div6 {
+                margin-left: 3%;
+            }
+            .picture {
+                margin-left: 23%;
+            }
+
+        }
+@media only screen and (min-width:1200px) and (max-width:1300px)
+{
+    .box01{
+        margin-left: 59%;
+    }
+    .img3 {
+        width: 157.47px;
+        padding-left: 10.53px;
+}
+.img1{
+    padding-left: 10.53px;
+}
+.img2{
+    padding-left: 10.53px;
+}
+.img3{
+    padding-left: 10.53px;
+}
+.img4{
+    padding-left: 10.53px;
+}
+.img5{
+    padding-left: 10.53px;
+}
+.img6{
+    padding-left: 10.53px;
+}
+.img002 {
+    padding-left: 75%;
+}
+.div001 img{
+    padding-top: 2px;
+    width: 137%;
+}
+.main3 .div2 {
+    margin-left: 18%;
+}
+.main3 .div3 {
+    margin-left: 21%;}
+    .main3 .div4 {
+        margin-left: 12%;
+    }
+    .main3 .div5 {
+               margin-left: 11%;}
+               .main3 .div6 {
+                margin-left: 4%;
+            }
+            .picture {
+                margin-left: 29%;
+            }
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
